# markdown_preview_rust

./: Cargo.toml  preview.html
src/: main.rs
src/cli/: cli.rs
src/markdown/: html_file.rs  markdown.rs  mod.rs  preview.rs
